trouble shoot bug on game rules menu, add some comments and deleted some redundant code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
 
         <!-- Sub Menu Containers -->
-        <!-- Game rules page -->
+        <!-- Game Rules Sub Menu -->
         <section id="rules-sub-menu" class="main-window center-margin text-align-centre txt-white sub-menu-container">
             <h2 class="menu-heading">Game Rules</h2>
             
@@ -122,6 +122,8 @@
                 <button id="exit-rules" class="back-to-menu btn-bg btn">MAIN <span class="key-control-indicator">M</span>ENU</button>
             </nav>
         </section>
+
+        <!-- Responsible Gaming sub Menu -->
         <section id="responsible-sub-menu" class="main-window center-margin text-align-centre txt-white sub-menu-container">
             <h2 class="menu-heading">Responsible Gaming</h2>
             <p class="rg-content">
