add event listener for the options menu button and add 3 divs

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         </section>
 
         <section id="options-sub-menu" class="main-window center-margin text-align-centre txt-white sub-menu-container">
-            <h2 class="main-heading">Game Options</h2>
-            <h3>Color Theme</h3>
+            <h2 class="menu-heading">Game Options</h2>
+            <h3 class="menu-sub-heading">Color Theme:</h3>
             <div id="green" class="color-theme"></div>
             <div id="blue" class="color-theme"></div>
             <div id="neon" class="color-theme"></div>
