--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <section id="options-sub-menu" class="main-window center-margin text-align-centre txt-white sub-menu-container">
             <h2 class="menu-heading">Game Options</h2>
             <h3 class="menu-sub-heading">Color Theme:</h3>
-            <div id="green" class="color-theme active-theme"></div>
-            <div id="blue" class="color-theme alt-theme-border"></div>
-            <div id="purple" class="color-theme alt-theme-border"></div>
+            <div id="green" data-type="green" class="color-theme alt-theme-border active-theme"></div>
+            <div id="blue" data-type="blue" class="color-theme alt-theme-border"></div>
+            <div id="purple" data-type="purple" class="color-theme alt-theme-border"></div>
 
             <nav>
                 <button id="exit-options" class="back-to-menu btn-bg btn">MAIN <span class="key-control-indicator">M</span>ENU</button>
