add golden surround to results modal and tidy CSS comments

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </section>
 
             <!-- Results Modal with transparent back gorund -->
-            <!--<div id="modal-surround">-->
+            <div id="modal-surround">
                 <section id="result-modal">
                     <h2 id="result">
                         Ready to Play?
@@ -196,7 +196,7 @@
                         <button class="btn btn-bg center-margin" id="redeal-btn"><span class="key-control-indicator">D</span>eal Me In</button>
                     </div>
                 </section>   
-            <!--</div>-->
+            </div>
 
             <!-- Container for players hand -->
             <section id="player-side">
