change copyright to created by

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </li>
         </ul>
         <small id="copyright">
-            <i class="fa-solid fa-copyright">opyright of dnlbowers</i>
+            <i class="fa-solid fa-copyright">reated by dnlbowers</i>
         </small>
     </footer>    
 <!-- Link to JavaScript file -->
