Change color theme options selectors from divs to buttons, change styling for height, width, display, margin and padding on these three elements

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         <section id="options-sub-menu" class="main-window center-margin text-align-centre txt-white sub-menu-container">
             <h2 class="menu-heading">Game Options</h2>
             <h3 class="menu-sub-heading">Color Theme:</h3>
-            <div id="green" data-type="green" class="color-theme alt-theme-border active-theme" aria-label="green/default theme"></div>
-            <div id="blue" data-type="blue" class="color-theme alt-theme-border" aria-label="blue theme"></div>
-            <div id="purple" data-type="purple" class="color-theme alt-theme-border" aria-label="purple/pink theme"></div>
+            <button id="green" data-type="green" class="color-theme alt-theme-border active-theme" aria-label="green/default theme"></button>
+            <button id="blue" data-type="blue" class="color-theme alt-theme-border" aria-label="blue theme"></button>
+            <button id="purple" data-type="purple" class="color-theme alt-theme-border" aria-label="purple/pink theme"></button>
 
             <nav>
                 <button id="exit-options" class="back-to-menu btn-bg btn">MAIN <span class="key-control-indicator">M</span>ENU</button>
