--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     The game can be play from the keyboard without the need of you mouse.
                 </p>
                 <p>
-                    All key controls as marked in read with a black underline on the relevant button i.e H = hit.
+                    All keyboard controls as marked with red letters on the relevant button i.e H = hit.
                 </p>
                 <p>
                     The control keys will only works whilst the relevant control button is visible on the screen.
