Add footer to feature section of readme.md Change fonts throughout the page. tidy HTML footer

--- a/index.html
+++ b/index.html
@@ -208,22 +208,22 @@
     <footer class="text-align-centre">
         <ul>
             <li class="social-media-li">
-                <a href="https://www.github.com/dnlbowers" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fa-brands fa-github-square social-icon"></i></a>
+                <a href="https://www.github.com/dnlbowers" class="social-icon" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fa-brands fa-github-square"></i></a>
             </li>
             <li class="social-media-li">
-                <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fa-brands fa-linkedin social-icon"></i></a>
+                <a href="https://www.linkedin.com/in/dnlbowers/" class="social-icon" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fa-brands fa-linkedin"></i></a>
             </li>
         </ul>
         <small id="copyright">
             <i class="fa-solid fa-copyright">reated by dnlbowers</i>
         </small>
-    </footer>    
-<!-- Link to JavaScript file -->
-<script src="assets/js/script.js"></script>
-<!-- No script error -->
-<noscript>
-    Your browser either does not support JavaScript, or it is not enabled! If you wish to play this game, then 
-    either change your browser or enable it for the use of JavaScript.
-  </noscript>
+    </footer>   
+    <!-- Link to JavaScript file -->
+    <script src="assets/js/script.js"></script>
+    <!-- No script error -->
+    <noscript>
+        Your browser either does not support JavaScript, or it is not enabled! If you wish to play this game, then 
+        either change your browser or enable it for the use of JavaScript.
+    </noscript>
 </body>
 </html>
