Make the game area wider and tweek styles to suit, add letter spacing

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <!-- Game area -->
         <section id="game-table" class="text-align-centre main-window center-margin txt-white">        
             <!-- Container for dealers cards-->
-            <section id="dealer-side" class="line-break-below">
-                <h2>House Hand</h2>
+            <section id="dealer-side">
+                <h2 class="line-break-below">House Hand</h2>
                 <div id="dealer-card-container" class="card-container">
 
                 </div>
@@ -164,10 +164,10 @@
                         Wins: <span id="wins">0</span>
                     </li>
                     <li class="score-tally">
-                        Loses: <span id="loses">0</span>
+                        Loses: <span id="losses">0</span>
                     </li>
                     <li class="score-tally">
-                        Drawn: <span id="drawn">0</span>
+                        Drawn: <span id="draws">0</span>
                     </li>
                 </ul>
                 <button class="btn btn-bg" id="reset-btn"><span class="key-control-indicator">C</span>LEAR TALLY</button>
@@ -188,7 +188,7 @@
             </div>
             <!-- Container for players hand -->
             <section id="player-side">
-                <h2>Player Hand</h2>
+                <h2 class="line-break-below">Player Hand</h2>
                 <div id="player-card-container" class="card-container">
                 
                 </div>
