remove second for loop in firsCards function, and more info to testing.md

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <button id="scoreboard-accordion" class="rule-heading" aria-controls="scoreboard-rules" aria-expanded="false"><h3>Scoreboard:</h3></button>
 
             <div id="scoreboard-rules-section" class="rule-segment" aria-hidden="true" aria-labelledby="scoreboard-accordion" role="region">
-                <p>The scoreboard keeps a tally of your wins, loses, and draws. At any point, you can reset this tally with the "RESET SCORE" button or the "R" key on the keyboard.</p>
+                <p>The scoreboard keeps a tally of your wins, loses, and draws. At any point, you can reset this tally with the "RESET SCORE" button or the "C" key on the keyboard.</p>
             </div> 
 
             <button id="keyboard-controls-accordion" class="rule-heading" aria-controls="card-values" aria-expanded="false"><h3>Keyboard Controls:</h3></button>
@@ -106,7 +106,7 @@
                     The game can be play from the keyboard without the need of you mouse.
                 </p>
                 <p>
-                    All keyboard controls as marked with red letters on the relevant button i.e H = hit.
+                    All keyboard controls as marked with red letters on the relevant button i.e H = Hit Me and S = Stand.
                 </p>
                 <p>
                     The control keys will only works whilst the relevant control button is visible on the screen.
