update scoreboard tally ref names to match the earlier change in ID name

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                         Wins: <span id="wins">0</span>
                     </li>
                     <li class="score-tally">
-                        Loses: <span id="losses">0</span>
+                        Losses: <span id="losses">0</span>
                     </li>
                     <li class="score-tally">
-                        Drawn: <span id="draws">0</span>
+                        Draws: <span id="draws">0</span>
                     </li>
                 </ul>
                 <button class="btn btn-bg" id="reset-btn"><span class="key-control-indicator">C</span>LEAR TALLY</button>
