Change reset score in rules to clear tally

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <button id="scoreboard-accordion" class="rule-heading" aria-controls="scoreboard-rules" aria-expanded="false"><h3>Scoreboard:</h3></button>
 
             <div id="scoreboard-rules-section" class="rule-segment" aria-hidden="true" aria-labelledby="scoreboard-accordion" role="region">
-                <p>The scoreboard keeps a tally of your wins, loses, and draws. At any point, you can reset this tally with the "RESET SCORE" button or the "C" key on the keyboard.</p>
+                <p>The scoreboard keeps a tally of your wins, loses, and draws. At any point, you can reset this tally with the "CLEAR TALLY" button or the "C" key on the keyboard.</p>
             </div> 
 
             <button id="keyboard-controls-accordion" class="rule-heading" aria-controls="card-values" aria-expanded="false"><h3>Keyboard Controls:</h3></button>
