Change aria controls to match ID of rule segment, change game area to article tag

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p>The scoreboard keeps a tally of your wins, loses, and draws. At any point, you can reset this tally with the "CLEAR TALLY" button or the "C" key on the keyboard.</p>
             </div> 
 
-            <button id="keyboard-controls-accordion" class="rule-heading" aria-controls="card-values" aria-expanded="false">Keyboard Controls:</button>
+            <button id="keyboard-controls-accordion" class="rule-heading" aria-controls="keyboard-controls-section" aria-expanded="false">Keyboard Controls:</button>
             
             <div id="keyboard-controls-section" class="rule-segment" aria-hidden="true" aria-labelledby="keyboard-controls-accordion" role="region">
                 <p>
@@ -148,7 +148,7 @@
             </nav>
         </section>
         <!-- Game area -->
-        <section id="game-table" class="text-align-centre main-window center-margin txt-white">        
+        <article id="game-table" class="text-align-centre main-window center-margin txt-white">        
             <!-- Container for dealers cards-->
             <section id="dealer-side">
                 <h2 class="line-break-below">House Hand</h2>
@@ -202,7 +202,7 @@
                 <a id="rules-anchor" aria-label = "Takes you to the game rules">Game Rules</a>
                 <button class="btn btn-bg" id="stand-btn"><span class= "key-control-indicator">S</span>TAND</button>
             </section>
-        </section>
+        </article>
     </main>
     <!-- Footer with social links and copyright -->
     <footer class="text-align-centre">
