Change font awesome import to JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <title>Blackjack</title>
 </head>
@@ -215,9 +214,11 @@
             </li>
         </ul>
         <small id="copyright">
-            <i class="fa-solid fa-copyright">reated by dnlbowers</i>
+            <i class="fa-solid fa-copyright"></i>reated by dnlbowers
         </small>
-    </footer>   
+    </footer> 
+    <!-- Font awesome script -->  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/js/all.min.js" crossorigin="anonymous"></script>
     <!-- Link to JavaScript file -->
     <script src="assets/js/script.js"></script>
     <!-- No script error -->
