Add no script content in the no script the tag

--- a/index.html
+++ b/index.html
@@ -224,8 +224,11 @@
     <script src="assets/js/script.js"></script>
     <!-- No script error -->
     <noscript>
-        Your browser either does not support JavaScript, or it is not enabled! If you wish to play this game, then 
-        either change your browser or enable it for the use of JavaScript.
+        <h1>JavaScript Required>
+        <p>
+            Your browser either does not support JavaScript, or it is not enabled! If you wish to play this game, then 
+            either change your browser or enable it for the use of JavaScript.
+        </p>
     </noscript>
 </body>
 </html>
