Corrected no script content

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <script src="assets/js/script.js"></script>
     <!-- No script error -->
     <noscript>
-        <h1>JavaScript Required>
+        <h1>JavaScript Required</h1>
         <p>
             Your browser either does not support JavaScript, or it is not enabled! If you wish to play this game, then 
             either change your browser or enable it for the use of JavaScript.
