Run sub menus through grammarly

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
             
             <div id="keyboard-controls-section" class="rule-segment" aria-hidden="true" aria-labelledby="keyboard-controls-accordion" role="region">
                 <p>
-                    The game can be play from the keyboard without the need of you mouse.
+                    The player can play the game from the keyboard without the need for a mouse.
                 </p>
                 <p>
                     All keyboard controls as marked with red letters on the relevant button i.e H = Hit Me and S = Stand.
                 </p>
                 <p>
-                    The control keys will only works whilst the relevant control button is visible on the screen.
+                    The control keys will only work while the relevant control button is visible on the screen.
                 </p>
             </div> 
             <!-- Button to navigate back to the navigation menu -->
