add another button for when the player accesses the rules via game anchor so they can return to the table.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- second button in game rules -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -118,7 +120,8 @@
 
             <!-- Button to navigate back to the navigation menu -->
             <nav>
-                <button data-type="exit-rules" class="back-to-menu btn-bg btn">MAIN <span class="key-control-indicator">M</span>ENU</button>
+                <button id ="to-menu-btn" data-type="exit-rules" class="back-to-menu btn-bg btn">MAIN <span class="key-control-indicator">M</span>ENU</button>
+                <button id="to-table-btn" data-type="exit-to-table" class="back-to-menu btn-bg btn"><span class="key-control-indicator">C</span>ONTINUE</button>
             </nav>
         </section>
 
@@ -235,7 +238,7 @@
 
     <!-- Link to JavaScript file -->
     <script src="assets/js/script.js"></script>
-    
+
     <!-- No script error -->
     <noscript>
         <h1>JavaScript Required</h1>
