add screenshot of anchor tag version of rules menu

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <!-- Button to navigate back to the navigation menu -->
             <nav>
                 <button id ="to-menu-btn" data-type="exit-rules" class="back-to-menu btn-bg btn">MAIN <span class="key-control-indicator">M</span>ENU</button>
-                <button id="to-table-btn" data-type="exit-to-table" class="back-to-menu btn-bg btn"><span class="key-control-indicator">C</span>ONTINUE</button>
+                <button id="to-table-btn" data-type="exit-to-table" class="back-to-menu btn-bg btn"><span class="key-control-indicator">B</span>ACK TO GAME</button>
             </nav>
         </section>
 
